<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    tools:context=".LoginActivity">
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        
        <TextView
            android:id="@+id/tvLoginheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/LoginHeader"/>

        <TextView
            android:id="@+id/tvIntro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/intro"
            />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFB"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_facebook"
                android:elevation="2dp"
                style="@style/socialButton"
                >
            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_google"
                style="@style/socialButton"
                >
            </com.google.android.material.button.MaterialButton>
        </LinearLayout>

        <TextView
            android:id="@+id/tvOrUseEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/orUseEmail"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterEmail"
                android:layout_marginTop="15dp"
                app:boxCornerRadiusTopStart="9dp"
                app:boxCornerRadiusTopEnd="9dp"
                app:boxCornerRadiusBottomStart="9dp"
                app:boxCornerRadiusBottomEnd="9dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tfEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"

                    />
            </com.google.android.material.textfield.TextInputLayout>
<!--style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"

                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/gray"
                app:boxCornerRadiusTopStart="9dp"
                app:boxCornerRadiusTopEnd="9dp"
                app:boxCornerRadiusBottomStart="9dp"
                app:boxCornerRadiusBottomEnd="9dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tfPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:buttonTint="@color/design_default_color_primary"
                android:text="Remember me?"
                android:textColor="@color/lightDark"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignIn"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/signIn"
                >

            </com.google.android.material.button.MaterialButton>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightDark"
                android:text="@string/notAccount"/>
            <Button
                android:id="@+id/textButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightDark"
                android:text="@string/signUp"
                android:textAllCaps="false"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                />

        </LinearLayout>
        
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>